fixed subtitle color in dark mode

--- a/week_1/mission/styles.css
+++ b/week_1/mission/styles.css
@@ -57,6 +57,10 @@ img {
 }
 
 .dark, .dark h1, dark p {
-    background-color: black;
+    background-color: #333;
     color: white;
+}
+
+.dark h2 {
+    color: #4F9ACF;
 }
